--- a/css/poster.css
+++ b/css/poster.css
@@ -151,6 +151,53 @@ html {
     font-size: 2rem;
 }
 
+.carousel {
+    max-width: 500px;
+    margin: 1rem auto;
+    position: relative;
+}
+
+.carousel img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.carousel .carousel__item, .carousel .carousel__item--hidden {
+    display: none;
+}
+
+.carousel .carousel__item--visible {
+    display: block;
+    animation: fade-in 1s;
+}
+
+@keyframes fade-in {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.carousel .carousel__actions {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel .carousel__actions button {
+    border-radius: 50px;
+    cursor: pointer;
+    font-weight: bold;
+    height: 50px;
+    width: 50px;
+    border: 0;
+    background-color: rgba(56, 56, 56, 0.604);
+    color: #fff;
+    font-size: 2rem;
+    margin: 0.5rem;
+}
+
 footer {
     margin-top: 2rem;
     text-align: center;
